<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/butRez"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginBottom="10dp"
        android:text="@string/Add"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/white" />

    <View
        android:id="@+id/view1"
        android:layout_width="205dp"
        android:layout_height="75dp"
        android:layout_marginEnd="-2dp"
        android:layout_marginBottom="-2dp"
        app:layout_constraintBottom_toBottomOf="@+id/butRez"
        app:layout_constraintEnd_toEndOf="@+id/butRez"
        android:background="@drawable/ramka"
        android:visibility="invisible"
        />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/but1"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/selectdrawable"
            android:text="@string/But1"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />


        <Button
            android:id="@+id/but2"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/but2"
            android:text="@string/But2"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/but3"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/but3"
            android:text="@string/But3"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/but4"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/but4"
            android:text="@string/But4"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />


        <Button
            android:id="@+id/but5"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/black"
            android:text="@string/But5"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:visibility="invisible" />

    </LinearLayout>

    <TextView
        android:id="@+id/text1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:clickable="true"
        android:text="@string/Add"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="30dp"
        android:text="@string/no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/butRez"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="100dp"
        android:text="@string/no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/butRez"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="170dp"
        android:text="@string/no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/butRez"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="240dp"
        android:text="@string/no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/butRez"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="300dp"
        android:text="@string/no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/butRez"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>